# LLM-Network

./: .gitignore  README.md  open_admin_dashboard.bat  pyproject.toml  quickstart_demo.bat  quickstart_demo_v0_1_1.bat  repair_worker_install.bat  repair_worker_install_v0_1_1.bat  start_llm_network_worker_v0_1_1.bat  start_network_server.bat  start_worker_daemon.bat  uninstall_worker.bat  uninstall_worker_v0_1_1.bat
lobster-claw-dashboard/: package.json  tailwind.config.js  tsconfig.app.json
lobster-claw-dashboard/src/: main.tsx  styles.css
lobster-claw-dashboard/src/components/: ActivityFeed.tsx  AgentCard.tsx  AlertsPanel.tsx  AppShell.tsx  ChartFrame.tsx  DashboardGrid.tsx  MascotWidget.tsx  Sidebar.tsx  StatCard.tsx  StatusBadge.tsx  TaskTable.tsx  TopBar.tsx
lobster-claw-dashboard/src/data/: mockDashboardData.ts
scripts/: bootstrap_linux.sh
src/ollama_network/: api.py  auth.py  branding.py  catalog.py  cli.py  constants.py  coordinator.py  dashboard.py  executor.py  landing.py  ledger.py  local_hardware.py  models.py  server.py  service.py  state_store.py  worker_bootstrap.py  worker_daemon.py
tests/: test_artifacts.py  test_cli.py  test_credit_system.py  test_executor.py  test_ollama_local.py  test_ollama_network.py  test_runtime_api.py  test_state_store.py  test_worker_bootstrap.py  test_worker_daemon.py
